<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">employee</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_name">Enter Name</string>
    <string name="emp_id">Enter Id</string>
    <string name="sal">Enter Salary</string>
    <string name="add">Add</string>
    <string name="del">Delete</string>
    <string name="upd">Update</string>
    <string name="view">View</string>
    <string name="view_all">View All</string>

</resources>
